Added few changes for index.html

--- a/index.html
+++ b/index.html
@@ -18,22 +18,23 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- Original Site Link: https://www.yangskitchenla.com/ -->
     <div class="container">
       <!-- Header Section -->
       <header class="header_container">
         <div class="header_logo__container">
-          <img
+          <a href="./index.html"><img
             src="./img/yangskitchen-logo.png"
             alt="Yang's Kitchen Logo"
             class="header__logo"
-          />
+          /></a>
         </div>
         <ul class="navbar__list">
           <li><a href="#" class="navbar__link">Menu</a></li>
           <li><a href="#" class="navbar__link">Order To-Go</a></li>
           <li><a href="#" class="navbar__link">Gift Cards</a></li>
           <li><a href="#" class="navbar__link">Private Event Inquiries</a></li>
-          <li><a href="#" class="navbar__link">Contact</a></li>
+          <li><a href="./contactus.html" class="navbar__link">Contact</a></li>
         </ul>
         <i class="fa-brands fa-instagram"></i>
       </header>
